Fix image overflow in project body

--- a/app/assets/stylesheets/hackweek.scss
+++ b/app/assets/stylesheets/hackweek.scss
@@ -208,6 +208,9 @@ table.project_table td {
     small {
       font-size: 12px;
     }
+    img {
+      max-width: 100%;
+    }
   }
   ul, ol {
     margin-top: 10px;
